--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     font-size: 40px;
     text-align: center;
     scroll-behavior: smooth;
-    font-family: Arial;
+    font-family: Arial,serif;
 }
 
 body{
@@ -30,7 +30,7 @@ body{
     justify-content: space-evenly;
     margin-bottom: 10px;
     background-color: #17153B;
-    box-shadow: 2px 2px 5px #000;
+    box-shadow: 4px 4px 5px #000;
     padding: 10px;
     transition: top 0.2s ease-in-out;
 
@@ -47,7 +47,7 @@ body{
 /*Greeting*/
 .bfg-wrapper{
     margin: 70px 0 150px 0;
-    backdrop-filter: blur(10px);
+
     background-color: rgb(255, 255, 255, 0.05);
 }
 .bfg{
@@ -61,15 +61,19 @@ body{
 
 /*Info*/
 .info{
+    min-width: 100px;
     flex-direction: row;
-    margin: 60px 40px 50px;
-    padding: 20px 0;
+    margin: 60px auto 50px;
+    padding: 30px;
     text-align: justify;
     background-color: #17153B;
-
 }
-.infoText h1{
+.infoText{
+    background-color: black;
+}
+.info h1{
     text-align: center;
+    padding-bottom: 20px;
 }
 
 /*Experience*/
@@ -103,14 +107,37 @@ body{
 }
 
 /*Skills*/
+.skills-wrapper{
+    background-color: #17153B;
+    padding: 20px;
+    margin: -35px auto;
+}
 .skills{
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: row;
     align-items: center;
-    outline: 1px solid lightblue;
-    margin-bottom: 100px;
-    background-color: #17153B;
+    justify-content: space-between;
+
+    margin: 20px;
 }
+.skills a{
+    color: white;
+    text-underline: transparent;
+}
+.skills a:hover{
+    transform: scale(1.1);
+    color: darkred;
+}
+.skills-wrapper h1{
+
+}
+.skills-icon{
+    display: flex;
+    padding: 40px;
+    color: white;
+
+}
+
 
 /*Projects*/
 .projects{
